syntax = "proto3";

package vela.api.model;
option go_package = "github.com/oam-dev/velacp/pkg/datastore/model";

import "validate/validate.proto";

message Cluster {

  string name = 1 [(validate.rules).string.min_len = 1];

  bytes kubeconfig = 2;

  // Unix time of the last time when the cluster is updated.
  int64 updated_at = 3 [(validate.rules).int64.gt = 0];
}